--- a/Views/books/layout.ejs
+++ b/Views/books/layout.ejs
@@ -2,13 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title><%= title %></title>
+    <title>BookSter</title>
     <link rel="stylesheet" href="/css/styles.css">
     <script type="text/javascript" src="/js/app.js"></script>
-
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,900' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    
+
+    <% include ./partials/navbar %>
     <%- body %>
 
   </body>
